# Semester-project-3-Throwbot

./: CMakeLists.txt  README.md  matlabComm.cpp  matlabComm.hpp
gripperfolder/: main.cpp
